# ROS2_car_like_mobile_robot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
ros2_ws/src/car_like_mobile_robot_bringup/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/car_like_mobile_robot_bringup/car_like_mobile_robot_bringup/: generate_bezier_box.py
ros2_ws/src/car_like_mobile_robot_bringup/config/: common_param.yaml
ros2_ws/src/car_like_mobile_robot_bringup/launch/: car_like_mobile_robot_sim.launch.py
ros2_ws/src/car_like_mobile_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/car_like_mobile_robot_description/config/: car_like_mobile_robot_sim.yaml
ros2_ws/src/car_like_mobile_robot_description/launch/: car_like_mobile_robot.launch.py
ros2_ws/src/car_like_mobile_robot_description/rviz/: urdf.rviz
ros2_ws/src/car_like_mobile_robot_description/urdf/: car_like_mobile_robot.urdf.xacro
ros2_ws/src/car_like_mobile_robot_description/urdf/include/: gazebo_plugin.xacro  ros2_control.xacro
ros2_ws/src/car_like_mobile_robot_description/worlds/: empty.world
ros2_ws/src/car_like_mobile_robot_driver/: CMakeLists.txt  package.xml
ros2_ws/src/car_like_mobile_robot_driver/include/car_like_mobile_robot_driver/: car_like_mobile_robot.hpp
ros2_ws/src/car_like_mobile_robot_driver/src/: car_like_mobile_robot.cpp
ros2_ws/src/car_like_mobile_robot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/car_like_mobile_robot_gazebo/config/: gz_bridge.yaml  state_variable_pub_config.yaml
ros2_ws/src/car_like_mobile_robot_gazebo/include/car_like_mobile_robot_gazebo/: state_variable_pub.hpp
ros2_ws/src/car_like_mobile_robot_gazebo/launch/: car_like_mobile_robot_gazebo.launch.py
ros2_ws/src/car_like_mobile_robot_gazebo/script/: generate_bezier_box.py
ros2_ws/src/car_like_mobile_robot_gazebo/src/: state_variable_pub.cpp
ros2_ws/src/car_like_mobile_robot_gazebo/worlds/: bezier_box.sdf  test_world.sdf
ros2_ws/src/cmd_vel_driver/: CMakeLists.txt  package.xml
ros2_ws/src/cmd_vel_driver/config/: joy_to_cmd_vel_config.yaml
ros2_ws/src/cmd_vel_driver/include/cmd_vel_driver/: cmd_vel_driver.hpp  joy_to_cmd_vel.hpp
ros2_ws/src/cmd_vel_driver/launch/: joy_to_cmd_vel.launch.py
ros2_ws/src/cmd_vel_driver/src/: cmd_vel_driver.cpp  joy_to_cmd_vel.cpp
ros2_ws/src/file_logger/: CMakeLists.txt  package.xml
ros2_ws/src/file_logger/include/file_logger/: car_logger.hpp
ros2_ws/src/file_logger/log_files/: debug_log.csv
ros2_ws/src/file_logger/src/: car_logger.cpp
